# rusty-learning

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml  requirements-lint.txt  requirements.txt
.github/workflows/: CI.yml
rusty_learning/: perceptron.py
src/: lib.rs
src/algo/: perceptron.rs
tests/: conftest.py  test_linag.py  test_perceptron.py
