[package]
name = "rusty-learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusty_learning"
crate-type = ["cdylib"]

[dependencies]
nalgebra = "0.31.4"
pyo3 = { version = "0.16.5", features = ["extension-module"] }
